Update border width to fix scroll flicker

--- a/app/assets/styles/project-styles/modules/_cards.scss
+++ b/app/assets/styles/project-styles/modules/_cards.scss
@@ -48,7 +48,7 @@
 
 .card{
 	position: relative;
-	border: .5px solid var(--color-accent-alt-50);
+	border: 1px solid var(--color-accent-alt-50);
 	padding: 1rem;
 	padding-bottom: 2rem;
 	&__image{
